--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 											<li><a href="./CV.html">CV - publications </a></li>
 										</ul>
 									</li>
-									<li class="break"><a href="carte_1.html">Cartes</a></li>
+									<li class="break"><a href="Cartes.html">Cartes</a></li>
 									<li><a href="index.html">Autres</a></li>
 								</ul>
 							</nav>
