--- a/CV.html
+++ b/CV.html
@@ -76,7 +76,7 @@
 											title="Inline Frame Example"
 											width="100%"
 											height="500"
-											src="file://C:\Users\Manfred\Documents\GitHub\ML-stuffs.github.io\Citations.html">
+											src="Citations.html">
 									</iframe>
 
 							</article>
