--- a/CV.html
+++ b/CV.html
@@ -28,10 +28,10 @@
 										<a href="#">Introduction</a>
 										<ul>
 											<li><a href="#">Qui suis-je ? </a></li>
-											<li><a href="#">CV - publications </a></li>
+											<li><a href="CV.html">CV - publications </a></li>
 										</ul>
 									</li>
-									<li class="break"><a href="carte_1.html">Cartes</a></li>
+									<li class="break"><a href="Cartes.html">Cartes</a></li>
 									<li><a href="no-sidebar.html">Autres</a></li>
 								</ul>
 							</nav>
