--- a/Cartes.html
+++ b/Cartes.html
@@ -28,7 +28,7 @@
 										<a href="#">Introduction</a>
 										<ul>
 											<li><a href="#">Qui suis-je ? </a></li>
-											<li><a href="#">CV - publications </a></li>
+											<li><a href="CV.html">CV - publications </a></li>
 										</ul>
 									</li>
 									<li class="break"><a href="Cartes.html">Cartes</a></li>
