--- a/CV.html
+++ b/CV.html
@@ -76,7 +76,7 @@
 											title="Inline Frame Example"
 											width="100%"
 											height="500"
-											src="Citations.html">
+											src="citations.html">
 									</iframe>
 
 							</article>
